--- a/RichEditorView/Assets/editor/style.css
+++ b/RichEditorView/Assets/editor/style.css
@@ -56,6 +56,6 @@ div {
     overflow: auto;
     display: block;
     font-family: 'HelveticaNeue';
-    color:#666666;
+    color:#FFFFFF;
     font-size: 12pt;
 }
